update pharmacy tests
